# 3D-curves

./: .gitignore  CMakeLists.txt  README.md  circle.cpp  circle.h  curve.cpp  curve.h  ellipse.cpp  ellipse.h  helix.cpp  helix.h  main.cpp  point.cpp  point.h
